# superflow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: NSIS.template.in  cmake-boilerplate.cmake  config.cmake.in  enable-tests.cmake  packaging.cmake  uninstall.cmake
core/: CMakeLists.txt  core-config.cmake.in
core/include/superflow/: buffered_consumer_port.h  callback_consumer_port.h  connection_manager.h  connection_spec.h  consumer_port.h  factory.h  factory_map.h  graph.h  graph_factory.h  interface_port.h  mapped_asset_manager.h  multi_consumer_port.h  multi_queue_getter.h  multi_requester_port.h  policy.h  port.h  port_manager.h  port_status.h  producer_port.h  proxel.h  proxel_config.h  proxel_status.h  queue_getter.h  queue_set_getter.h  requester_port.h  responder_port.h  value.h
core/include/superflow/utils/: blocker.h  data_stream.h  graphviz.h  lock_queue.h  metronome.h  multi_lock_queue.h  mutexed.h  pimpl_h.h  pimpl_impl.h  proxel_timer.h  shared_mutexed.h  signal_waiter.h  sleeper.h  terminated_exception.h  throttle.h  wait_for_signal.h
core/src/: graph.cpp  graphviz.cpp  metronome.cpp  port_manager.cpp  proxel.cpp  proxel_timer.cpp  signal_waiter.cpp  sleeper.cpp  wait_for_signal.cpp
core/test/: CMakeLists.txt  connectable_port.h  connectable_proxel.h  crashing_proxel.h  multi_connectable_port.h  pimpl_test.cpp  pimpl_test.h  templated_testproxel.h  test_block_lock_queue.cpp  test_buffered_consumer_port.cpp  test_callback_consumer_port.cpp  test_connection_manager.cpp  test_graph.cpp  test_graph_factory.cpp  test_interface_port.cpp  test_lock_queue.cpp  test_metronome.cpp  test_multi_consumer_port.cpp  test_multi_lock_queue.cpp  test_multi_queue_getter.cpp  test_multi_requester_port.cpp  test_mutexed.cpp  test_pimpl.cpp  test_port_manager.cpp  test_producer_consumer_port.cpp  test_proxel_status.cpp  test_proxel_timer.cpp  test_requester_responder_port.cpp  test_shared_mutexed.cpp  test_signal_waiter.cpp  test_sleeper.cpp  test_throttle.cpp  threaded_proxel.h
curses/: CMakeLists.txt  curses-config.cmake.in
curses/include/superflow/curses/: graph_gui.h  proxel_window.h  window.h
curses/src/: graph_gui.cpp  proxel_window.cpp  window.cpp
curses/test/: CMakeLists.txt  test_superflow_curses.cpp
doc/: Doxyfile
loader/: CMakeLists.txt  README.md  loader-config.cmake.in
loader/include/superflow/loader/: load_factories.h  proxel_library.h  register_factory.h
loader/src/: proxel_library.cpp
loader/test/: CMakeLists.txt  README.md  test_load_factories.cpp  test_proxel_library.cpp  test_rtld_now.cpp
loader/test/proxels/: CMakeLists.txt  dummy.cpp  dummy_value_adapter.cpp  fauxade.h  lib_path.h.in  mummy.cpp  yummy.cpp
loader/test/proxels/include/testing/: dummy_value_adapter.h
test_package/: CMakeLists.txt  GenerateTestFromModule.cmake  conanfile.py
test_package/src/: superflowcore_runtime_test.cpp  superflowcurses_runtime_test.cpp  superflowloader_runtime_test.cpp  superflowyaml_runtime_test.cpp
yaml/: CMakeLists.txt  yaml-config.cmake.in
yaml/include/superflow/yaml/: factory.h  yaml.h  yaml_property_list.h  yaml_string_pair.h
yaml/src/: yaml.cpp
yaml/test/: CMakeLists.txt  test_yaml_property_list.cpp  yaml-test-proxel.cpp
